--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flux-router-component": "^0.6.1",
     "fluxible": "^0.3.1",
     "fluxible-plugin-fetchr": "^0.2.3",
+    "fluxible-plugin-routr": "^0.3.0",
     "react": "^0.13.1"
   },
   "devDependencies": {
