--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Perf testing React",
   "author": "Michael Ridgway <mridgway@yahoo-inc.com>",
   "scripts": {
+    "profile": "NODE_ENV=production node --prof --prof_lazy --log profile.js; node-tick-processor v8.log > profile.txt",
     "start": "NODE_ENV=production node bench-chat.js"
   },
   "dependencies": {
@@ -19,7 +20,9 @@
   },
   "devDependencies": {
     "babel-loader": "^4.0.0",
-    "benchmark": "^1.0.0",
-    "es6-promise": "^2.0.1"
+    "benchtable": "0.0.4",
+    "es6-promise": "^2.0.1",
+    "profiler": "^1.2.3",
+    "tick": "^0.1.1"
   }
 }
