--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Perf testing React",
   "author": "Michael Ridgway <mridgway@yahoo-inc.com>",
   "scripts": {
-    "profile": "NODE_ENV=production node --prof --prof_lazy --log profile.js; node-tick-processor v8.log > profile.txt",
+    "profile": "NODE_ENV=production node --prof --prof_lazy --log profile.js; node-tick-processor v8.log | grep -v 'unknown code' > profile.txt; NODE_ENV=production node --prof --prof_lazy --log profile-opt.js; node-tick-processor v8.log | grep -v 'unknown code' > profile-opt.txt",
     "start": "NODE_ENV=production node bench-chat.js"
   },
   "dependencies": {
