Travis config to run in docker

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Michael Ridgway <mridgway@yahoo-inc.com>",
   "scripts": {
     "profile": "NODE_ENV=production node --prof --prof_lazy --log profile.js; node-tick-processor v8.log | grep -v 'unknown code' > profile.txt; NODE_ENV=production node --prof --prof_lazy --log profile-opt.js; node-tick-processor v8.log | grep -v 'unknown code' > profile-opt.txt",
-    "start": "NODE_ENV=production node bench-chat.js"
+    "start": "NODE_ENV=production node bench-chat.js",
+    "test": "NODE_ENV=production node bench-chat.js"
   },
   "dependencies": {
     "babel": "^4.6.3",
