--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "Perf testing React",
   "author": "Michael Ridgway <mridgway@yahoo-inc.com>",
   "scripts": {
+    "bench-chat": "NODE_ENV=production node bench-chat.js",
+    "bench-hello": "NODE_ENV=production node bench-hello.js",
     "profile": "NODE_ENV=production node --prof --prof_lazy --log profile.js; node-tick-processor v8.log | grep -v 'unknown code' > profile.txt; NODE_ENV=production node --prof --prof_lazy --log profile-opt.js; node-tick-processor v8.log | grep -v 'unknown code' > profile-opt.txt",
     "start": "NODE_ENV=production node bench-chat.js",
     "test": "NODE_ENV=production node bench-chat.js"
